--- a/ui/download.html
+++ b/ui/download.html
@@ -15,40 +15,46 @@
     <body>
         <h1 id="title">Download/Purchase</h1>
         <div id="body">
-            <p>Categories:</p>
-            <ul id="categories"></ul>
-            <p><a href="#" onclick="moreParents(); return false">More...</a> <a id="addParent">Add</a></p>
-            <p style="color: red">You are legally prohibited (unless the file license explicitly permits this) to distribute
-                or obtain the download links in any other way except by using this interface or
-                interface of an equivalent functionality (that is paying the same fee and royalties).
-                Any interface distributing file uploaded through this software complex or a part of this software complex
-                must retain this license notice.</p>
-            <p style="color: red">When buying physical items, we are not responsible for sellers to work in a good manner.
-                We never give any refunds!
-                We cannot even remove fake sellers. To have your item delivered, you must notify the seller about your
-                purchase! If you cannot contact a seller, it is not our failure.</p>
-            <p>Language: <span id="locale"></span></p>
-            <p>Title: <span id="title"></span></p>
-            <p>Description: <span id="description"></span></p>
-            <p>License: <span id="license"></span></p>
-            <p>Shipping address and info (optional for digital items): <input type="text" id="shippingInfo"/>
-                (Warning: All your purchase information will be published.)</p>
-            <p>Multiply price by <input type="text" id="multiplier" value="1" style="width: 3em"/> (useful if you want to purchase more than one item).</p>
-            <p>Prices:</p>
-            <ul>
-                <li>in ETH: <span id="priceETH"></span> ($<span id="priceUSD"></span>)
-                    <input id="buyETH" class="buy" type="button" value="Buy" onclick="payETH()"/>
-                    <input type="button" value="Donate" onclick="donateETH()"/></li>
-                <li>in AR: <span id="priceAR"></span> ($<span id="priceUSDAR"></span> - <span id="arDiscount"></span>% discount) |
-                    AR wallet key file: <input type="file" id="arWalletKeyFile"/>
-                    <input id="buyAR" class="buy" type="button" value="Buy" onclick="payAR()"/>
-                    <input type="button" value="Donate" onclick="donateAR()"/>
-                    <span style="color: red">Selling physical items (anything except digital downloads)
-                        for AR is currently unsupported! We don't refund AR paid for physical items.</span></li>
-            </ul>
-            <p>File formats:</p>
-            <ul id="formats"></ul>
-            <p id="noFiles"><em>No files</em></p>
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <p>Categories:</p>
+                        <ul id="categories"></ul>
+                        <p><a href="#" onclick="moreParents(); return false">More...</a> <a id="addParent">Add</a></p>
+                        <p style="color: red">You are legally prohibited (unless the file license explicitly permits this) to distribute
+                            or obtain the download links in any other way except by using this interface or
+                            interface of an equivalent functionality (that is paying the same fee and royalties).
+                            Any interface distributing file uploaded through this software complex or a part of this software complex
+                            must retain this license notice.</p>
+                        <p style="color: red">When buying physical items, we are not responsible for sellers to work in a good manner.
+                            We never give any refunds!
+                            We cannot even remove fake sellers. To have your item delivered, you must notify the seller about your
+                            purchase! If you cannot contact a seller, it is not our failure.</p>
+                        <p>Language: <span id="locale"></span></p>
+                        <p>Title: <span id="title"></span></p>
+                        <p>Description: <span id="description"></span></p>
+                        <p>License: <span id="license"></span></p>
+                        <p>Shipping address and info (optional for digital items): <input type="text" id="shippingInfo"/>
+                            (Warning: All your purchase information will be published.)</p>
+                        <p>Multiply price by <input type="text" id="multiplier" value="1" style="width: 3em"/> (useful if you want to purchase more than one item).</p>
+                        <p>Prices:</p>
+                        <ul>
+                            <li>in ETH: <span id="priceETH"></span> ($<span id="priceUSD"></span>)
+                                <input id="buyETH" class="buy" type="button" value="Buy" onclick="payETH()"/>
+                                <input type="button" value="Donate" onclick="donateETH()"/></li>
+                            <li>in AR: <span id="priceAR"></span> ($<span id="priceUSDAR"></span> - <span id="arDiscount"></span>% discount) |
+                                AR wallet key file: <input type="file" id="arWalletKeyFile"/>
+                                <input id="buyAR" class="buy" type="button" value="Buy" onclick="payAR()"/>
+                                <input type="button" value="Donate" onclick="donateAR()"/>
+                                <span style="color: red">Selling physical items (anything except digital downloads)
+                                    for AR is currently unsupported! We don't refund AR paid for physical items.</span></li>
+                        </ul>
+                        <p>File formats:</p>
+                        <ul id="formats"></ul>
+                        <p id="noFiles"><em>No files</em></p>
+                    </div>
+                </div>
+            </section>
         </div>
     </body>
 </html>
