--- a/ui/help.html
+++ b/ui/help.html
@@ -7,32 +7,38 @@
     <body>
         <h1 id="title">Help</h1>
         <div id="body">
-            <h2>Purpose of this site</h2>
-            <p>We allow you to publish (or browse):</p>
-            <ul>
-                <li>files (e-books, audio, software, etc.) to sell or download</li>
-                <li>short messages like Twitter</li>
-                <li>Web links</li>
-                <li>blog posts</li>
-                <li>your own categories of stuff</li>
-            </ul>
-            <h2>Category structure</h2>
-            <p>Users add stuff (files, messages, links, and subcategories) to <em>categories</em>.</p>
-            <p>Categories are of two kinds:</p>
-            <ul>
-                <li>owned</li>
-                <li>unowned</li>
-            </ul>
-            <p>For an owned category, the owner chooses which stuff to put inside it.</p>
-            <p>For an unowned category, users vote with Ether cryptocurrency which stuff will be on the top and which goes to the bottom (spam zone) of the list of stuff.</p>
-            <p>So users themselves form a category structure and what stuff will be in categoiries.</p>
-            <h2>How to earn money</h2>
-            <p>You can Earn ETH and AR cryptocurrencies with this site (Fees below are subject to change):</p>
-            <ul>
-                <li>You earn 90% of your file sales (both in ETH and in AR).</li>
-                <li>You earn 50% of upvotes of your posts, links, owned categoiries.</li>
-                <li>Finally you can advertise your own site with links and posts.</li>
-            </ul>
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <h2>Purpose of this site</h2>
+                        <p>We allow you to publish (or browse):</p>
+                        <ul>
+                            <li>files (e-books, audio, software, etc.) to sell or download</li>
+                            <li>short messages like Twitter</li>
+                            <li>Web links</li>
+                            <li>blog posts</li>
+                            <li>your own categories of stuff</li>
+                        </ul>
+                        <h2>Category structure</h2>
+                        <p>Users add stuff (files, messages, links, and subcategories) to <em>categories</em>.</p>
+                        <p>Categories are of two kinds:</p>
+                        <ul>
+                            <li>owned</li>
+                            <li>unowned</li>
+                        </ul>
+                        <p>For an owned category, the owner chooses which stuff to put inside it.</p>
+                        <p>For an unowned category, users vote with Ether cryptocurrency which stuff will be on the top and which goes to the bottom (spam zone) of the list of stuff.</p>
+                        <p>So users themselves form a category structure and what stuff will be in categoiries.</p>
+                        <h2>How to earn money</h2>
+                        <p>You can Earn ETH and AR cryptocurrencies with this site (Fees below are subject to change):</p>
+                        <ul>
+                            <li>You earn 90% of your file sales (both in ETH and in AR).</li>
+                            <li>You earn 50% of upvotes of your posts, links, owned categoiries.</li>
+                            <li>Finally you can advertise your own site with links and posts.</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
         </div>
     </body>
 </html>
