--- a/ui/upload.html
+++ b/ui/upload.html
@@ -14,19 +14,25 @@
     <body>
         <h1 id="title">Upload a File</h1>
         <div id="body">
-            <form id="form" onkeypress="return event.keyCode != 13;">
-                <p>Files set version: <input type="number" id="version" name="version" required="required"/></p>
-                <p>File format: <input type="text" id="format" name="format" required="required"/></p>
-                <p>File: <input type="file" id="file" name="file" required="required"/></p>
-                <p>AR wallet key file to pay for upload:
-                    <input type="file" id="arWalletKeyFile" name="arWalletKeyFile"/></p>
-                <p style="font-size: smaller">For security reasons you are recommended to use another Arweave account than
-                    the account to which you receive profit or store significant funds.</p>
-                <p>WARNING: Your file will be made available at a URL containing a password. Anyone knowing
-                    the password can download the file (however this may be illegal dependently on the
-                    jurisdiction and the license). Removal of the uploaded file is not possible.</p>
-                <p><input type="button" value="submit" onclick="uploadFile()"/></p>
-            </form>
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <form id="form" onkeypress="return event.keyCode != 13;">
+                            <p>Files set version: <input type="number" id="version" name="version" required="required"/></p>
+                            <p>File format: <input type="text" id="format" name="format" required="required"/></p>
+                            <p>File: <input type="file" id="file" name="file" required="required"/></p>
+                            <p>AR wallet key file to pay for upload:
+                                <input type="file" id="arWalletKeyFile" name="arWalletKeyFile"/></p>
+                            <p style="font-size: smaller">For security reasons you are recommended to use another Arweave account than
+                                the account to which you receive profit or store significant funds.</p>
+                            <p>WARNING: Your file will be made available at a URL containing a password. Anyone knowing
+                                the password can download the file (however this may be illegal dependently on the
+                                jurisdiction and the license). Removal of the uploaded file is not possible.</p>
+                            <p><input type="button" value="submit" onclick="uploadFile()"/></p>
+                        </form>
+                    </div>
+                </div>
+            </section>
         </div>
     </body>
 </html>
