--- a/ui/author-purchases.html
+++ b/ui/author-purchases.html
@@ -15,18 +15,24 @@
     <body>
         <h1 id="title">Recent Purchases of Your Items</h1>
         <div id="body">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Item</th>
-                        <th>Price paid (in ETH)</th>
-                        <th>Author received</th>
-                        <th>Number of items paid for</th>
-                        <th>Shipping info</th>
-                    </tr>
-                </thead>
-                <tbody id="theTable"></tbody>
-            </table>
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Item</th>
+                                    <th>Price paid (in ETH)</th>
+                                    <th>Author received</th>
+                                    <th>Number of items paid for</th>
+                                    <th>Shipping info</th>
+                                </tr>
+                            </thead>
+                            <tbody id="theTable"></tbody>
+                        </table>
+                    </div>
+                </div>
+            </section>
         </div>
     </body>
 </html>
