--- a/ui/settings.html
+++ b/ui/settings.html
@@ -9,15 +9,21 @@
     <body>
         <h1 id="title">Settings</h1>
         <div id="body">
-            <p>This page uses cookies.</p>
-            <p><input type="button" onclick="reconnectWeb3()" value="Re-connect Web3 provider"/></p>
-            <p>Select your Ethereum network:
-                <select id="web3network" onchange="networkChange()">
-                    <option value="0x63">POA Core</option>
-                    <option value="0x4d">POA Sokol (test mode)</option>
-                </select>
-            </p>
-            <p><a href="templates.html">Blog templates</a></p>
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <p>This page uses cookies.</p>
+                        <p><input type="button" onclick="reconnectWeb3()" value="Re-connect Web3 provider"/></p>
+                        <p>Select your Ethereum network:
+                            <select id="web3network" onchange="networkChange()">
+                                <option value="0x63">POA Core</option>
+                                <option value="0x4d">POA Sokol (test mode)</option>
+                            </select>
+                        </p>
+                        <p><a href="templates.html">Blog templates</a></p>
+                    </div>
+                </div>
+            </section>
         </div>
     </body>
 </html>
