--- a/ui/templates.html
+++ b/ui/templates.html
@@ -13,16 +13,22 @@
     <body>
         <h1 id="title">My Blog Templates</h1>
         <div id="body">
-            <p><input type="button" value="Add new" onclick="createTemplate()"/></p>
-            <ul id="templates"></ul>
-            <div id="dialog" style="display: none">
-                <form id="dialogForm">
-                    <input type="hidden" name="id"/>
-                    <p>Template name*: <input type="text" name="name" required="required"/></p>
-                    <p>JavaScript URL*: <input type="url" name="js" required="required"/></p>
-                    <p>Settings URL: <input type="url" name="settings"/></p>
-                </form>
-            </div>
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <p><input type="button" value="Add new" onclick="createTemplate()"/></p>
+                        <ul id="templates"></ul>
+                        <div id="dialog" style="display: none">
+                            <form id="dialogForm">
+                                <input type="hidden" name="id"/>
+                                <p>Template name*: <input type="text" name="name" required="required"/></p>
+                                <p>JavaScript URL*: <input type="url" name="js" required="required"/></p>
+                                <p>Settings URL: <input type="url" name="settings"/></p>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </body>
 </html>
